--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .vs/spritersguildwip/v16/Server/sqlite3/storage.ide
 .vs/spritersguildwip/v16/Server/sqlite3/storage.ide-shm
 .vs/spritersguildwip/v16/Server/sqlite3/storage.ide-wal
+.vs/spritersguildwip/DesignTimeBuild/.dtbcache
