--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
-
-.vs/spritersguildwip/v16/.suo
-.vs/spritersguildwip/v16/Server/sqlite3/db.lock
-.vs/spritersguildwip/v16/Server/sqlite3/storage.ide
-.vs/spritersguildwip/v16/Server/sqlite3/storage.ide-shm
-.vs/spritersguildwip/v16/Server/sqlite3/storage.ide-wal
-.vs/spritersguildwip/DesignTimeBuild/.dtbcache
+.obj/*
+.vs/*
