--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 .obj/*
 .vs/*
+obj/spritersguildwip.csproj.nuget.g.targets
+obj/spritersguildwip.csproj.nuget.g.props
+obj/spritersguildwip.csproj.nuget.dgspec.json
+obj/spritersguildwip.csproj.nuget.cache
+obj/project.assets.json
+obj/Debug/net45/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+obj/Debug/net45/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+obj/Debug/net45/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+obj/Debug/net45/spritersguildwip.pdb
+obj/Debug/net45/spritersguildwip.dll
+obj/Debug/net45/spritersguildwip.csprojResolveAssemblyReference.cache
+obj/Debug/net45/spritersguildwip.csprojAssemblyReference.cache
+obj/Debug/net45/spritersguildwip.csproj.FileListAbsolute.txt
+obj/Debug/net45/spritersguildwip.csproj.CoreCompileInputs.cache
+obj/Debug/net45/spritersguildwip.csproj.CopyComplete
+obj/Debug/net45/spritersguildwip.assets.cache
+obj/Debug/net45/spritersguildwip.AssemblyInfoInputs.cache
+obj/Debug/net45/spritersguildwip.AssemblyInfo.cs
