--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ obj/Debug/net45/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
 .vs/spritersguildwip/DesignTimeBuild/.dtbcache
 obj/Debug/net45/spritersguildwip.csproj.CoreCompileInputs.cache
 obj/Debug/net45/spritersguildwip.csproj.CoreCompileInputs.cache
+.vs/spritersguildwip/DesignTimeBuild/.dtbcache
