--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,12 @@ obj/Debug/net45/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
 obj/Debug/net45/spritersguildwip.csproj.CoreCompileInputs.cache
 obj/Debug/net45/spritersguildwip.csproj.CoreCompileInputs.cache
 .vs/spritersguildwip/DesignTimeBuild/.dtbcache
+obj/Debug/net45/starlightriver.AssemblyInfo.cs
+obj/Debug/net45/starlightriver.AssemblyInfoInputs.cache
+obj/Debug/net45/starlightriver.assets.cache
+obj/Debug/net45/starlightriver.csproj.CoreCompileInputs.cache
+obj/Debug/net45/StarlightRiver.csprojAssemblyReference.cache
+obj/StarlightRiver.csproj.nuget.cache
+obj/starlightriver.csproj.nuget.dgspec.json
+obj/starlightriver.csproj.nuget.g.props
+obj/starlightriver.csproj.nuget.g.targets
