--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,11 @@ obj/StarlightRiver.csproj.nuget.cache
 obj/starlightriver.csproj.nuget.dgspec.json
 obj/starlightriver.csproj.nuget.g.props
 obj/starlightriver.csproj.nuget.g.targets
+bin/Debug/net45/starlightriver.dll
+bin/Debug/net45/starlightriver.pdb
+bin/Debug/net45/Terraria.pdb
+bin/Debug/net45/Terraria.xml
+obj/Debug/net45/StarlightRiver.csproj.FileListAbsolute.txt
+obj/Debug/net45/StarlightRiver.csprojResolveAssemblyReference.cache
+obj/Debug/net45/starlightriver.pdb
+obj/Debug/net45/StarlightRiver.dll
