--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ obj/Debug/net45/StarlightRiver.csproj.FileListAbsolute.txt
 obj/Debug/net45/StarlightRiver.csprojResolveAssemblyReference.cache
 obj/Debug/net45/starlightriver.pdb
 obj/Debug/net45/StarlightRiver.dll
+obj/Debug/net45/StarlightRiver.csproj.FileListAbsolute.txt
+bin/Debug/net45/Terraria.xml
+bin/Debug/net45/Terraria.pdb
