--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ obj/Debug/net45/StarlightRiver.dll
 obj/Debug/net45/StarlightRiver.csproj.FileListAbsolute.txt
 bin/Debug/net45/Terraria.xml
 bin/Debug/net45/Terraria.pdb
+obj/Debug/net45/StarlightRiver.csproj.FileListAbsolute.txt
+bin/Debug/net45/Terraria.xml
+bin/Debug/net45/Terraria.pdb
