--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,12 @@ bin/Debug/net45/Terraria.pdb
 obj/Debug/net45/StarlightRiver.csproj.FileListAbsolute.txt
 bin/Debug/net45/Terraria.xml
 bin/Debug/net45/Terraria.pdb
+obj/Debug/net45/StarlightRiver.csproj.FileListAbsolute.txt
+bin/Debug/net45/starlightriver.pdb
+bin/Debug/net45/starlightriver.dll
+bin/Debug/net45/MonoMod.Utils.xml
+bin/Debug/net45/MonoMod.RuntimeDetour.xml
+obj/Debug/net45/StarlightRiver.csproj.FileListAbsolute.txt
+obj/Debug/net45/StarlightRiver.dll
+obj/Debug/net45/starlightriver.pdb
+Properties/launchSettings.json
