--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,10 @@ obj/Debug/net45/StarlightRiver.csproj.FileListAbsolute.txt
 obj/Debug/net45/StarlightRiver.dll
 obj/Debug/net45/starlightriver.pdb
 Properties/launchSettings.json
+Properties/launchSettings.json
+bin/Debug/net45/starlightriver.dll
+bin/Debug/net45/starlightriver.pdb
+obj/Debug/net45/StarlightRiver.csproj.FileListAbsolute.txt
+obj/Debug/net45/StarlightRiver.dll
+obj/Debug/net45/starlightriver.pdb
+Properties/launchSettings.json
