--- a/StarlightRiver.csproj
+++ b/StarlightRiver.csproj
@@ -10,4 +10,9 @@
   <Target Name="BuildMod" AfterTargets="Build">
     <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define $(DefineConstants) -unsafe $(AllowUnsafeBlocks)" />
   </Target>
+  <ItemGroup>
+    <Reference Include="AchievementLib">
+      <HintPath>..\AchievementLib\bin\Debug\net45\AchievementLib.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
