--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ obj/Debug/net45/StarlightRiver.dll
 obj/Debug/net45/starlightriver.pdb
 Properties/launchSettings.json
 StarlightRiver.csproj.DotSettings
+obj/
+bin/
