--- a/StarlightRiver.csproj
+++ b/StarlightRiver.csproj
@@ -10,4 +10,9 @@
   <Target Name="BuildMod" AfterTargets="Build">
     <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define $(DefineConstants) -unsafe $(AllowUnsafeBlocks)" />
   </Target>
+  <ItemGroup>
+    <Reference Include="FKBossHealthBar">
+      <HintPath>..\..\references\mods\FKBossHealthBar_v1.3.2.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
