--- a/StarlightRiver.csproj
+++ b/StarlightRiver.csproj
@@ -11,8 +11,8 @@
     <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define $(DefineConstants) -unsafe $(AllowUnsafeBlocks)" />
   </Target>
   <ItemGroup>
-    <Reference Include="FKBossHealthBar">
-      <HintPath>..\..\references\mods\FKBossHealthBar_v1.3.2.dll</HintPath>
+    <Reference Include="SubworldLibrary">
+      <HintPath>D:\Downloads\SubworldLibrary.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
