--- a/StarlightRiver.csproj
+++ b/StarlightRiver.csproj
@@ -11,6 +11,9 @@
     <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define $(DefineConstants) -unsafe $(AllowUnsafeBlocks)" />
   </Target>
   <ItemGroup>
+    <Reference Include="StructureHelper">
+      <HintPath>..\StructureHelper\bin\Debug\net45\StructureHelper.dll</HintPath>
+    </Reference>
     <Reference Include="SubworldLibrary">
       <HintPath>D:\Downloads\SubworldLibrary.dll</HintPath>
     </Reference>
