--- a/StarlightRiver.csproj
+++ b/StarlightRiver.csproj
@@ -12,7 +12,7 @@
   </Target>
   <ItemGroup>
     <Reference Include="StructureHelper">
-      <HintPath>..\StructureHelper\bin\Debug\net45\StructureHelper.dll</HintPath>
+      <HintPath>bin\Debug\net45\StructureHelper.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
