--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -7,7 +7,7 @@
     },
     "TerrariaServer": {
       "commandName": "Executable",
-      "executablePath": "$(tMLServerPath)",
+      "executablePath": "D:\\Program Files (x86)\\Steam\\steamapps\\common\\tModLoader\\tModLoaderServer.exe",
       "workingDirectory": "$(TerrariaSteamPath)"
     }
   }
