--- a/.editorconfig
+++ b/.editorconfig
@@ -17,3 +17,12 @@ dotnet_diagnostic.RCS1032.severity = none
 
 # IDE0047: Remove unnecessary parentheses
 dotnet_diagnostic.IDE0047.severity = none
+
+# IDE0011: Add braces
+csharp_prefer_braces = false:none
+
+# CA1815: Override equals and operator equals on value types
+dotnet_diagnostic.CA1815.severity = none
+
+# CA1031: Do not catch general exception types
+dotnet_diagnostic.CA1031.severity = none
