--- a/StarlightRiver.csproj
+++ b/StarlightRiver.csproj
@@ -21,4 +21,7 @@
       <HintPath>lib\StructureHelper_v0.1.4.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Tiles\Overgrow\Multitiles\" />
+  </ItemGroup>
 </Project>
