--- a/StarlightRiver.csproj
+++ b/StarlightRiver.csproj
@@ -18,7 +18,7 @@
       <HintPath>lib\NetEasy_v0.1.6.dll</HintPath>
     </Reference>
     <Reference Include="StructureHelper">
-      <HintPath>lib\StructureHelper_v0.1.4.dll</HintPath>
+      <HintPath>bin\Debug\net45\StructureHelper_v0.1.7.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
