--- a/StarlightRiver.csproj
+++ b/StarlightRiver.csproj
@@ -11,6 +11,11 @@
     <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define &quot;$(DefineConstants)&quot; -unsafe $(AllowUnsafeBlocks)" />
   </Target>
   <ItemGroup>
+    <Compile Remove="Tiles\Overgrow\Multitiles\**" />
+    <EmbeddedResource Remove="Tiles\Overgrow\Multitiles\**" />
+    <None Remove="Tiles\Overgrow\Multitiles\**" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
   <ItemGroup>
@@ -20,8 +25,5 @@
     <Reference Include="StructureHelper">
       <HintPath>lib\StructureHelper_v0.1.8.dll</HintPath>
     </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Tiles\Overgrow\Multitiles\" />
   </ItemGroup>
 </Project>
