gross warnings. no changes

--- a/StarlightRiver.csproj
+++ b/StarlightRiver.csproj
@@ -26,4 +26,7 @@
       <HintPath>lib\StructureHelper_v0.1.8.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build &quot;$(ProjectDir)\&quot; -eac &quot;$(TargetPath)&quot;" />
+  </Target>
 </Project>
